--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,17 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-server</artifactId>
+      <version>2.17</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.containers</groupId>
+      <artifactId>jersey-container-servlet-core</artifactId>
+      <version>2.17</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.jsoniter</groupId>
       <artifactId>jsoniter</artifactId>
       <version>0.9.15</version>
